syntax = "proto3";
package pb;

option go_package = "github.com/effective-security/trusty/api/pb";

import "pkix.proto";
import "ca.proto";
import "google/protobuf/empty.proto";
//import "google/protobuf/timestamp.proto";
// for grpc-gateway
import "google/api/annotations.proto";

service CIS {
    // Roots returns the root CAs
    rpc GetRoots(google.protobuf.Empty) returns (RootsResponse) {
        option (google.api.http) = {
            get: "/v1/cis/roots"
        };
    }

    // GetCertificate returns the certificate
    rpc GetCertificate(GetCertificateRequest) returns (CertificateResponse) {
        option (google.api.http) = {
            get: "/v1/cis/certs/{ID}"
        };
    }
}

// RootsResponse returns Root Certificates
message RootsResponse {
    repeated RootCertificate Roots = 1;
}
